2022-10-05_Kubernetes_TTC/kubernetes-training/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-world
  labels:
    app: hello-world-ds
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  selector:
    matchLabels:
      app: hello-world-ds
  template:
    metadata:
      labels:
        app: hello-world-ds
        svc: example
    spec:
      nodeName: sikademo-7pjlk
      containers:
        - name: hello-world
          image: ondrejsika/training-example:green
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
