2022-10-05_Kubernetes_TTC/kubernetes-training/ingress-paths.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lab3.sikademo.com
      secretName: xxx2-tls
  rules:
    - host: lab3.sikademo.com
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
