2022-10-05_Kubernetes_TTC/kubernetes-training/init_containers_migrations.yml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: job-read
rules:
  - apiGroups: ["batch"]
    resources: ["jobs"]
    resourceNames: ["sleep20s"]
    verbs: ["get", "list", "watch"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: job-read
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: job-read
subjects:
  - kind: ServiceAccount
    name: default
---
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    svc: example
spec:
  initContainers:
    - name: wait-for-migrations
      image: sikalabs/kubectl
      command:
        - "/bin/sh"
        - "-c"
        - "sleep 2 && kubectl wait --for=condition=complete --timeout=600s job/sleep20s"
  containers:
    - name: main
      image: ondrejsika/go-hello-world:2
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 100Mi
          cpu: 20m
