2022-10-05_Kubernetes_TTC/kubernetes-training/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    svc: example
  ports:
    - port: 80
